--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,48 @@
 width: 100%;
 }
 
+
+
+body{
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /*font-size: 16px;*/
+}
+
+
+.btext{
+    color: #f9f3f4;
+    position: absolute;
+    text-align: center;
+    top: 40%;
+    width: 100%;
+    line-height: 0.4em;
+}
+
+#particles-js h1{
+    font-size: 70px;
+}
+
+.btn{
+    color: #fff;
+    text-decoration: none;
+    border: #ccc 1px solid;
+    padding: 10px 15px;
+    border-radius: 8px;
+    line-height: 4em;
+}
+
+.btn:hover{
+    color: #b19295;
+    border: #fff 1px solid;
+}
+
+#particles-js{
+    background-image: url('image1.jpg');
+    height: 70vh;
+    font-size: 16px;
+}
+
 .carousel-caption{
     top : 50%;
     transform: translateY(-50%);
@@ -212,3 +254,9 @@ ellipse {
 .fa-wpforms{
     margin: 3px;
 }
+
+
+/* .carousel-item img {
+  width: auto;
+  height: 1000px;
+} */
